# codex-trace

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.multi-home.yml  package-lock.json  package.json
.claude/skills/cut-release/: SKILL.md
.claude/skills/cut-release/references/: changelog-template.md  conventional-commits.md  project-shape.md
.github/workflows/: image.yml  release.yml
openspec/changes/select-codex-home/: design.md  proposal.md  tasks.md
script/: install.sh  redeploy.sh
shared/: diff.ts  patch.test.ts  patch.ts  types.ts
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: http_api.rs  lib.rs  state.rs
src-tauri/src/commands/: homes.rs  mod.rs
src-tauri/src/parser/: compression.rs  discover.rs  entry.rs  mod.rs  session.rs  toolcall.rs  turn.rs
src-tauri/tests/: acl_consistency.rs
src/components/: CodexHomeSelector.test.tsx  CodexHomeSelector.tsx  ComplementaryItem.test.tsx  ComplementaryItem.tsx  Icons.tsx  InfoBar.test.tsx  InfoBar.tsx  KeybindBar.tsx  MarkdownRenderer.tsx  SidebarTree.test.tsx  ToolCallItem.test.tsx  ToolCallItem.tsx  TurnDetail.test.tsx  TurnDetail.tsx  TurnList.test.tsx  ViewToolbar.tsx  WorkerPanel.test.tsx  WorkerPanel.tsx
src/hooks/: useCodexHomes.test.ts  useCodexHomes.ts  usePicker.test.ts  usePicker.ts  useSession.ts  useTheme.ts
src/lib/: invoke.test.ts  invoke.ts  sessionDisplay.test.ts  shareRoute.test.ts  shareRoute.ts  theme.ts
src/styles/: global.css
(+10 files in other folders)
