[package]
name = "codex-trace"
version = "0.4.0"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "codex-trace"
path = "src/main.rs"

[lib]
name = "codex_trace_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
